ProdIND/ProdPrograms/force-app/main/default/objects/Deviation__c/Deviation__c.object-meta.xml
<CustomObject>
    <label>Deviation</label>
    <nameField>
        <displayFormat>D-{00000000}</displayFormat>
        <label>Deviation No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deviations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>