ProdIND/ProdPrograms/force-app/main/default/objects/Deviation__c/fields/Approval_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Approval_Conditions__c</fullName>
    <label>Approval Conditions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>