ProdIND/ProdPrograms/force-app/main/default/objects/Deviation__c/fields/Deviation_Description__c.field-meta.xml
<CustomField>
    <fullName>Deviation_Description__c</fullName>
    <description>To be retrieved from FICO engine</description>
    <label>Deviation Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>