ProdIND/ProdPrograms/force-app/main/default/objects/Deviation__c/fields/Deviation_Level__c.field-meta.xml
<CustomField>
    <fullName>Deviation_Level__c</fullName>
    <description>To be retrieved from FICO engine</description>
    <label>Deviation Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>