ProdIND/ProdPrograms/force-app/main/default/objects/Deviation__c/fields/Deviation_Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Deviation_Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deviation Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deviations</relationshipName>
    <type>Lookup</type>
</CustomField>