ProdIND/ProdPrograms/force-app/main/default/objects/Deviation__c/fields/Deviation_Type__c.field-meta.xml
<CustomField>
    <fullName>Deviation_Type__c</fullName>
    <description>It is used to store weather it is created from API call or Manual Deviation</description>
    <label>Deviation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>