ProdIND/ProdPrograms/force-app/main/default/objects/Deviation__c/fields/DeviationID__c.field-meta.xml
<CustomField>
    <fullName>DeviationID__c</fullName>
    <description>To be Retrieve from FICO Engine</description>
    <label>DeviationID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>