ProdIND/ProdPrograms/force-app/main/default/objects/Deviation__c/fields/EmployeeID__c.field-meta.xml
<CustomField>
    <fullName>EmployeeID__c</fullName>
    <description>Comma separated user id values, to be fetched from Accounts Teams corresponding to the roles</description>
    <label>EmployeeID</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>