ProdIND/ProdPrograms/force-app/main/default/objects/Deviation__c/fields/FicoDeviationCallout_Status__c.field-meta.xml
<CustomField>
    <fullName>FicoDeviationCallout_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FicoDeviationCallout Status</label>
    <type>Checkbox</type>
</CustomField>