ProdIND/ProdPrograms/force-app/main/default/objects/Deviation__c/fields/Hold_on__c.field-meta.xml
<CustomField>
    <fullName>Hold_on__c</fullName>
    <label>Hold on</label>
    <type>Date</type>
</CustomField>