ProdIND/ProdPrograms/force-app/main/default/objects/Deviation__c/fields/Is_IRR_Deviation__c.field-meta.xml
<CustomField>
    <fullName>Is_IRR_Deviation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is IRR Deviation</label>
    <type>Checkbox</type>
</CustomField>