ProdIND/ProdPrograms/force-app/main/default/objects/Deviation__c/fields/Justification_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Justification_Remarks__c</fullName>
    <label>Justification Remarks</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>