ProdIND/ProdPrograms/force-app/main/default/objects/Deviation__c/fields/Number_of_Days_Pending__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_Pending__c</fullName>
    <formula>TODAY() -  DATEVALUE(CreatedDate)</formula>
    <label>Number of Days Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>