ProdIND/ProdPrograms/force-app/main/default/objects/Deviation__c/fields/Parent_CAM__c.field-meta.xml
<CustomField>
    <fullName>Parent_CAM__c</fullName>
    <label>Parent CAM</label>
    <referenceTo>CAM__c</referenceTo>
    <relationshipLabel>Deviations</relationshipLabel>
    <relationshipName>Deviations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>