ProdIND/ProdPrograms/force-app/main/default/objects/Deviation__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>Deviation Remarks</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>