ProdIND/ProdPrograms/force-app/main/default/objects/Deviation__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Comma separated values for roles for which Deviation will be triggered</description>
    <label>Role</label>
    <type>TextArea</type>
</CustomField>