ProdIND/ProdPrograms/force-app/main/default/objects/Deviation__c/fields/Source_AppNo__c.field-meta.xml
<CustomField>
    <fullName>Source_AppNo__c</fullName>
    <label>Source AppNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>