ProdIND/ProdPrograms/force-app/main/default/objects/Deviation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Normal deviation or committee deviations</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>