ProdIND/ProdPrograms/force-app/main/default/objects/Deviation__c/fields/UpInFlag__c.field-meta.xml
<CustomField>
    <fullName>UpInFlag__c</fullName>
    <description>Comma separated user id values where user is up in role/level hierarchy from the roles/levels identified in FICO engine output, to be fetched from Accounts Teams</description>
    <label>UpInFlag</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>