ProdIND/ProdPrograms/force-app/main/default/objects/Deviation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Deviation_Description__c</columns>
    <columns>Role__c</columns>
    <columns>Deviation_Level__c</columns>
    <columns>Parent_CAM__c</columns>
    <columns>UpInFlag__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>